--- a/template/infra/k8s/secrets.yaml.jinja
+++ b/template/infra/k8s/secrets.yaml.jinja
@@ -31,10 +31,10 @@ type: Opaque
 stringData:
   # These will be populated from Key Vault using the command above
   mongodb-uri: ""
-{% if use_azure_auth -%}
+{% if use_azure_auth %}
   azure-client-id: ""
   azure-tenant-id: ""
   azure-api-scope: ""
-{% endif -%}
+{% endif %}
 
 
